--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,8 +1,11 @@
 .navbar{
-    height: 100px;
+    height: 120px;
+   
     .wrapper{
         max-width: 100%;
+        margin-bottom: 30px;
         margin:auto;
+        padding: 30px;
         display:flex;
         align-items: center;
          justify-content: space-between;
@@ -10,7 +13,7 @@
         
         .name{
             margin-left: 5%;
-        }
+        }wrapperwrapper
 
 
         span{
